fix title alignment

--- a/www/style.css
+++ b/www/style.css
@@ -862,6 +862,7 @@ select#filter-selector option:hover {
 
 .itemtitle h2 {
   font-size: large !important;
+  text-align: left;
 }
 
 .itemtitle h1:hover {
@@ -1231,6 +1232,10 @@ p {
 
   .itemtitle h2 {
     font-size: 1.5rem !important;
+    text-align: center;
+    position: absolute; /* Reapply positioning for centering */
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .item {
@@ -1290,6 +1295,10 @@ p {
 
   .itemtitle h2 {
     font-size: 2rem !important;
+        text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .pubdate p,
